placeholder overflow fix

--- a/src/app/components/calendar/calendar.css
+++ b/src/app/components/calendar/calendar.css
@@ -8,6 +8,7 @@
     .p-calendar .p-inputtext {
         flex: 1 1 auto;
         width: 1%;
+        text-overflow: ellipsis;
     }
 
     .p-calendar-w-btn .p-inputtext {
